--- a/css/resume.css
+++ b/css/resume.css
@@ -240,7 +240,7 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-  background-color: rgba( 0, 39, 77,0.7) !important;
+  background-color: rgba( 0, 39, 77, 1) !important;
 }
 
 .text-primary {
