--- a/css/resume.css
+++ b/css/resume.css
@@ -25,7 +25,6 @@ h5,
 h6 {
   font-family: 'Roboto';
   font-weight: 300;
-  /*text-transform: uppercase;*/
   color: #343a40;
 }
 
@@ -101,6 +100,101 @@ p.lead {
   font-size: 13pt;
   font-weight: 300;
 }
+
+.button {
+  background-color: #4CAF50; /* Green */
+  border-radius: 4px;
+  border: none;
+  color: white;
+  padding: 0px 12px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 12px;
+  margin: 4px 2px;
+  -webkit-transition-duration: 0.2s; /* Safari */
+  transition-duration: 0.2s;
+  cursor: pointer;
+}
+
+.button-pdf {
+  background-color: #66A4CC;
+  color: white;
+  border: 2px solid #66A4CC;
+}
+
+.button-pdf:hover {
+  background-color: white; 
+  color: black; 
+  border: 2px solid #66A4CC;
+  text-decoration: none;
+}
+
+.button-website {
+  background-color: #CC6666;
+  color: white;
+  border: 2px solid #CC6666;
+}
+
+.button-website:hover {
+  background-color: white; 
+  color: black; 
+  border: 2px solid #CC6666;
+  text-decoration: none;
+}
+
+.button-bibtex {
+  background-color: #5EBC79;
+  color: white;
+  border: 2px solid #5EBC79;
+}
+
+.button-bibtex:hover {
+  background-color: white; 
+  color: black; 
+  border: 2px solid #5EBC79;
+  text-decoration: none;
+}
+
+.button-arxiv {
+  background-color: #8582CC;
+  color: white;
+  border: 2px solid #8582CC;
+}
+
+.button-arxiv:hover {
+  background-color: white;
+  color: black;
+  border: 2px solid #8582CC;
+  text-decoration: none;
+}
+
+.button-code {
+  background-color: #756C6C;
+  color: white;
+  border: 2px solid #756C6C;
+}
+
+.button-code:hover {
+  background-color: white;
+  color: black;
+  border: 2px solid #756C6C;
+  text-decoration: none;
+}
+
+.button-suppl {
+  background-color: #CCAB66;
+  color: white;
+  border: 2px solid #CCAB66;
+}
+
+.button-suppl:hover {
+  background-color: white;
+  color: black;
+  border: 2px solid #CCAB66;
+  text-decoration: none;
+}
+
 
 
 #profilePhoto {
