--- a/creative.css
+++ b/creative.css
@@ -6,22 +6,51 @@ html {
 
 body {
   font-family: 'Roboto';
-  padding-top: 54px;
+  padding-top: 3.5rem;
   color: #868e96;
+  background-color: #edf0f7
+}
+
+section {
+  padding: 2rem 0;
+  margin-bottom: 0;
+  padding-bottom: 0;  
 }
 
 hr {
-  max-width: 50px;
-  border-width: 3px;
-  border-color: #00274D;
+  border-width: 1px;
+  border-color: #ccc;
+  margin-left: -5rem;
+  margin-right: -5rem;
 }
 
 hr.light {
   border-color: rgba(255,255,255,1);
 }
 
+.main-pane{
+  background-color: #ffffff;
+  border: 1px solid #ccc!important;
+  padding-left: 5rem;
+  padding-right: 5rem;
+}
+
+@media (max-width: 992px) {
+  .main-pane {
+    padding-left: 0rem;
+    padding-right: 0rem;
+  }
+  .container {
+    max-width: 90%;
+  }
+  hr {
+    margin-left: 0rem;
+    margin-right: 0rem;
+  }
+}
+
 a {
-  color: #00274D;
+  color: #4178DA;
   opacity: 0.7;
   -webkit-transition: all 0.2s;
   -moz-transition: all 0.2s;
@@ -74,6 +103,7 @@ h3 {
 .lead {
   font-size: 13pt;
   font-weight: 300;
+  text-align: justify;
 }
 
 .bg-primary {
@@ -96,14 +126,6 @@ h3 {
   font-weight: 100;
   font-family: 'Roboto';
   font-size: 12pt;
-}
-
-section {
-  padding: 2rem 0;
-}
-
-.section-heading {
-  margin-top: 0;
 }
 
 ::-moz-selection {
@@ -224,136 +246,6 @@ img::-moz-selection {
   }
 }
 
-header.masthead {
-  padding-top: 0rem;
-  padding-bottom: 0rem;
-  background-color: #00274D !important;
-  background-position: center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-
-header.masthead hr {
-  margin-top: 30px;
-  margin-bottom: 30px;
-}
-
-header.masthead h1 {
-  font-size: 2rem;
-  color: #fff;
-  font-weight: bold;
-}
-
-header.masthead p {
-  font-weight: 300;
-}
-
-@media (min-width: 768px) {
-  header.masthead p {
-    font-size: 1.15rem;
-  }
-  header.masthead {
-    min-height: 0vh;
-  }
-}
-
-@media (min-width: 992px) {
-  header.masthead {
-    min-height: 0vh;
-  }
-  header.masthead h1 {
-    font-size: 2rem;
-  }
-}
-
-@media (min-width: 1200px) {
-  header.masthead {
-    min-height: 0vh;
-  }
-  header.masthead h1 {
-    font-size: 2rem;
-  }
-}
-
-.overview-section {
-  margin-top: 3rem;
-  /*min-height: 80vh;*/
-}
-
-section.resume-section {
-  /*padding-top: 5rem !important;*/
-  /*padding-bottom: 5rem !important;*/
-}
-
-.service-box {
-  max-width: 400px;
-}
-
-.portfolio-box {
-  position: relative;
-  display: block;
-  max-width: 650px;
-  margin: 0 auto;
-}
-
-.portfolio-box .portfolio-box-caption {
-  position: absolute;
-  bottom: 0;
-  display: block;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  opacity: 0;
-  color: #fff;
-  background: rgba(240, 95, 64, 0.9);
-  -webkit-transition: all 0.2s;
-  -moz-transition: all 0.2s;
-  transition: all 0.2s;
-}
-
-.portfolio-box .portfolio-box-caption .portfolio-box-caption-content {
-  position: absolute;
-  top: 50%;
-  width: 100%;
-  transform: translateY(-50%);
-  text-align: center;
-}
-
-.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category,
-.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
-  padding: 0 15px;
-  font-family: 'Roboto';
-}
-
-.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
-  font-size: 14px;
-  font-weight: 600;
-  text-transform: uppercase;
-}
-
-.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
-  font-size: 18px;
-}
-
-.portfolio-box:hover .portfolio-box-caption {
-  opacity: 1;
-}
-
-.portfolio-box:focus {
-  outline: none;
-}
-
-@media (min-width: 768px) {
-  .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
-    font-size: 16px;
-  }
-  .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
-    font-size: 22px;
-  }
-}
-
 
 img {
     opacity: 1.0;
@@ -384,12 +276,6 @@ img:hover {
   margin-bottom: 0.1rem;
 }
 
-hr { 
-  height:3px; 
-  border:none; 
-  background-color: transparent; 
-}
-
 .each_pub {
   padding-bottom: 20px;
   padding-top: 20px;
@@ -403,8 +289,9 @@ hr {
   margin-bottom: 1px;
 }
 .pub_title {
-  font-weight: 300;
+  font-weight: 400;
   color: #323232;
+  line-height: 1.1;
 }
 .pub_author {
   font-weight: 100;
@@ -425,12 +312,15 @@ hr {
 .exp_title {
   font-weight: 300;
   color: #323232;
+  margin: 0;
 }
 .exp_place {
   font-weight: 100;
+  margin: 0;
 }
 .exp_period {
   font-weight: 100;
+  margin: 0;
 }
 
 
