--- a/creative.css
+++ b/creative.css
@@ -14,7 +14,7 @@ body {
 section {
   padding: 2rem 0;
   margin-bottom: 0;
-  padding-bottom: 0;  
+  padding-bottom: 0;
 }
 
 hr {
@@ -33,16 +33,19 @@ hr.light {
   border: 1px solid #ccc!important;
   padding-left: 5rem;
   padding-right: 5rem;
+  min-width: 800px;
+  max-width: 1000px;
 }
 
 @media (max-width: 992px) {
   .main-pane {
     padding-left: 0rem;
     padding-right: 0rem;
+    min-width: 375px;
   }
-  .container {
+  /*.container {
     max-width: 90%;
-  }
+  }*/
   hr {
     margin-left: 0rem;
     margin-right: 0rem;
@@ -82,22 +85,22 @@ h5,
 h6 {
   font-family: 'Roboto';
   font-weight: 300;
-  color: #343a40;
+  color: #00274d;
 }
 
 h1 {
-  font-size: 3rem;
-  line-height: 5.5rem;
+  font-size: 2rem;
+  line-height: 3.5rem;
   color: #00274d !important;
 }
 
 h2 {
-  font-size: 2.5rem;
+  font-size: 1.5rem;
   color: #00274d !important;
 }
 
 h3 {
-  font-size: 2rem;
+  font-size: 1.2rem;
 }
 
 .lead {
@@ -122,10 +125,43 @@ h3 {
   color: #fff;
   text-decoration: underline;
 }
-.subheading {
-  font-weight: 100;
+
+.header-1 {
+  font-size: 2rem;
+  color: #00274d !important;
+  font-weight: 300;
+  font-family: 'Roboto';
+}
+.header-2 {
+  font-weight: 300;
   font-family: 'Roboto';
   font-size: 12pt;
+}
+
+@media (max-width: 992px) {
+  .header-1 {
+    font-size: 1.5rem;
+    text-align: center;
+  }
+  .header-2 {
+    text-align: center;
+    line-height: 1.3;
+  }
+  .lead {
+    font-size: 11pt;
+  }
+  h1 {
+    font-size: 2rem;
+    line-height: 2.5rem;
+  }
+
+  h2 {
+    font-size: 1.5rem;
+  }
+
+  h3 {
+    font-size: 1.2rem;
+  }
 }
 
 ::-moz-selection {
@@ -166,9 +202,11 @@ img::-moz-selection {
 }
 
 .img-profile {
-    max-width: 15rem;
-    max-height: 15rem;
-  }
+  max-width: 15rem;
+  max-height: 15rem;
+  width: 100%;
+  margin: auto;
+}
 
 #mainNav .navbar-brand {
   font-weight: 400;
@@ -249,12 +287,10 @@ img::-moz-selection {
 
 img {
     opacity: 1.0;
-    filter: alpha(opacity=100); /* For IE8 and earlier */
 }
 
 img:hover {
     opacity: 1.0;
-    filter: alpha(opacity=100); /* For IE8 and earlier */
 }
 
 
@@ -290,20 +326,25 @@ img:hover {
 }
 .pub_title {
   font-weight: 400;
-  color: #323232;
-  line-height: 1.1;
+  color: #585858;
+  /*color: #00274d;*/
+  line-height: 1.2;
+  font-size:12pt;
+  padding-bottom: 5px;
 }
 .pub_author {
-  font-weight: 100;
+  font-weight: 300;
+  font-size:11pt;
+  line-height: 1.2;
 }
 .pub_venue {
   font-size:10pt;
-  font-weight: 100;
+  font-weight: 300;
   font-style: italic;
 }
 .pub_supplemental {
   font-size:10pt;
-  font-weight: 100;
+  font-weight: 300;
   margin-top:3px;
 }
 .oversizeImg {
@@ -311,15 +352,17 @@ img:hover {
 }
 .exp_title {
   font-weight: 300;
-  color: #323232;
+  /*color: #585858;*/
+  color: #00274d;
   margin: 0;
 }
 .exp_place {
-  font-weight: 100;
+  font-weight: 300;
   margin: 0;
+  font-style: italic;
 }
 .exp_period {
-  font-weight: 100;
+  font-weight: 300;
   margin: 0;
 }
 
