--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,6 +13,15 @@
     <meta property="og:image" content="img/profile.jpg">
     <meta property="og:url" content="https://pedro-morgado.github.io/">
     <meta property="og:type" content="website">
+  
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111354857-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-111354857-1');
+    </script>
 
     <!-- Bootstrap and JQuery-->
     <link href="/vendor/bootstrap/bootstrap-4.0.0-dist/css/bootstrap.min.css" rel="stylesheet">
