--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -121,10 +121,10 @@
       {% assign sorted = site.publications | sort: 'year' | reverse %}
       {% for pub in sorted %}
       <div class="row each_pub">
-        <div class="d-none d-md-block col-md-3 d-lg-block col-lg-3 text-center">
-          <img class="img-fluid px-3" src="{{ pub.thumbnail }}">
+        <div class="d-none d-md-block col-md-3 d-lg-block col-lg-3" style="min-height: 100px;">
+          <img class="img-fluid px-3 py-2 pub-thumbnail" src="{{ pub.thumbnail }}">
         </div>
-        <div class="col-lg-9 col-md-9 col-sm-12 my-auto">
+        <div class="col-lg-9 col-md-9 col-sm-12">
           <p class="pub_title">{{ pub.title }}</p>
           <p class="pub_author">{{ pub.authors }}</p>
           <p class="pub_venue">{{ pub.venue }}</p>
