--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -373,103 +373,73 @@ img:hover {
 
 
 .button {
-  background-color: #4CAF50; /* Green */
-  border-radius: 4px;
+  background-color: white;
+  border-radius: 20px;
   border: none;
-  color: white;
-  padding: 0px 12px;
+  color: black;
+  padding: 0px 8px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 12px;
-  margin: 4px 2px;
-  -webkit-transition-duration: 0.2s; /* Safari */
-  transition-duration: 0.2s;
+  margin: 0px 0px;
+  -webkit-transition-duration: 0s; /* Safari */
+  transition-duration: 0s;
   cursor: pointer;
   opacity: 1;
 }
 
-.button-pdf:hover, .button-suppl:hover {
-  background-color: #66A4CC;
+.button:hover {
   color: white;
   text-decoration: none;
 }
 
+.button-pdf:hover, .button-suppl:hover {
+  background-color: #66A4CC;
+}
+
 .button-pdf, .button-suppl {
-  background-color: white;
-  text-decoration: none;
-  color: black;
   border: 2px solid #66A4CC;
-  border-radius: 20px;
 }
 
 .button-arxiv:hover {
   background-color: #8582CC;
-  color: white;
-  text-decoration: none;
 }
 
 .button-arxiv {
-  background-color: white;
-  text-decoration: none;
-  color: black;
   border: 2px solid #8582CC;
-  border-radius: 20px;
 }
 
 .button-website:hover {
   background-color: #CC6666;
-  color: white;
-  text-decoration: none;
 }
 
 .button-website {
-  background-color: white;
-  text-decoration: none;
-  color: black;
   border: 2px solid #CC6666;
-  border-radius: 20px;
 }
 
 .button-bibtex:hover {
   background-color: #A6A6A6;
-  color: white;
-  text-decoration: none;
 }
 
 .button-bibtex {
-  background-color: white;
-  text-decoration: none;
-  color: black;
   border: 2px solid #A6A6A6;
-  border-radius: 20px;
 }
 
 .button-code:hover, .button-data:hover {
   background-color: #5EBC79;
-  color: white;
-  text-decoration: none;
 }
 
 .button-code, .button-data {
-  background-color: white;
-  text-decoration: none;
-  color: black;
   border: 2px solid #5EBC79;
-  border-radius: 20px;
 }
 
 .button-video:hover, .button-talk:hover, .button-slides:hover, .button-poster:hover, .button-summary:hover {
-  background-color: #CCAB66;
-  color: white;
-  text-decoration: none;
+  background-color: #ffa154;
 }
 
 .button-video, .button-talk, .button-slides, .button-poster, .button-summary {
-  background-color: white;
-  color: black;
-  border: 2px solid #CCAB66;
-  border-radius: 20px;
+  border: 2px solid #ffa154;
 }
 
 .button-empty {
