--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -394,28 +394,20 @@ img:hover {
   text-decoration: none;
 }
 
-.button-pdf:hover, .button-suppl:hover {
-  background-color: #66A4CC;
+.button-pdf:hover, .button-suppl:hover, .button-arxiv:hover {
+  background-color: #5d8bbf;
 }
 
-.button-pdf, .button-suppl {
-  border: 2px solid #66A4CC;
-}
-
-.button-arxiv:hover {
-  background-color: #8582CC;
-}
-
-.button-arxiv {
-  border: 2px solid #8582CC;
+.button-pdf, .button-suppl, .button-arxiv {
+  border: 2px solid #5d8bbf;
 }
 
 .button-website:hover {
-  background-color: #CC6666;
+  background-color: #b14f4e;
 }
 
 .button-website {
-  border: 2px solid #CC6666;
+  border: 2px solid #b14f4e;
 }
 
 .button-bibtex:hover {
@@ -426,20 +418,12 @@ img:hover {
   border: 2px solid #A6A6A6;
 }
 
-.button-code:hover, .button-data:hover {
-  background-color: #5EBC79;
+.button-code:hover, .button-data:hover, .button-video:hover, .button-talk:hover, .button-slides:hover, .button-poster:hover, .button-summary:hover {
+  background-color: #5ba86d;
 }
 
-.button-code, .button-data {
-  border: 2px solid #5EBC79;
-}
-
-.button-video:hover, .button-talk:hover, .button-slides:hover, .button-poster:hover, .button-summary:hover {
-  background-color: #ffa154;
-}
-
-.button-video, .button-talk, .button-slides, .button-poster, .button-summary {
-  border: 2px solid #ffa154;
+.button-code, .button-data, .button-video, .button-talk, .button-slides, .button-poster, .button-summary {
+  border: 2px solid #5ba86d;
 }
 
 .button-empty {
