--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -96,14 +96,26 @@
     <div class="row">
       <div class="col-12 mx-auto pt-5">
         <p class="lead">
-          I am a Ph.D. candidate in the Statistical Visual Computing Lab <a href="http://www.svcl.ucsd.edu" target="_blank">(SVCL)</a> with <a href="http://www.svcl.ucsd.edu/~nuno/" target="_blank">Prof. Nuno Vasconcelos </a> at the University of California, San Diego</a>. Before arriving to UC San Diego, I earned both B.Sc. and M.Sc. degrees from Instituto Superior Técnico, Universidade de Lisboa in 2010 and 2012, respectively.
+          I am a Ph.D. candidate in the Statistical Visual Computing Lab <a href="http://www.svcl.ucsd.edu" target="_blank">(SVCL)</a>
+          with <a href="http://www.svcl.ucsd.edu/~nuno/" target="_blank">Prof. Nuno Vasconcelos </a> at the
+          University of California, San Diego. Before arriving to UC San Diego, I earned both B.Sc. and M.Sc.
+          degrees from Instituto Superior Técnico, Universidade de Lisboa in 2010 and 2012, respectively.
         </p>
         <p class="lead mb-2">
-          The focus of my research lies in the intersection between machine learning and computer vision. I am interested in <b> designing deep learning models </b> that are capable of <b> accumulating wisdom </b> over time, from <b>sporadic encounters with data </b>, without <b>forgetting previously acquired knowledge</b>.
-          As such, I've previously worked and maintain an active interest in areas such as multi-task network design, life-long learning, zero-shot, and low-shot learning, multimodal joint embeddings for visual, audio and text embeddings.
+          I am interested in computer vision and machine learning.
+          Specifically, my research focuses on developing <b>learning and deployment frameworks</b> that enable deep learning
+          to operate with <b>restricted labeled data</b> and <b>restricted computing power</b>.
+          As such, I maintain an active interest in areas such as zero-shot, low-shot learning and other transfer
+          learning problems, self-supervised learning, multimodal supervision, and efficient training and deployment
+          procedures.
         </p>
         <p class="lead">
-          Before starting my Ph.D. studies, I worked with Prof. <a href="http://users.isr.ist.utl.pt/~msilveira/" target="_blank">Margarida Silveira</a> in the automatic diagnosis of Alzheimer's disease and its onset stages, from multiple brain imaging modalities such as MRI and PET.
+          Before starting my Ph.D. studies, I worked with Prof. <a href="http://users.isr.ist.utl.pt/~msilveira/" target="_blank">Margarida Silveira</a>
+          in the automatic diagnosis of Alzheimer's disease and its onset stages, from multiple brain imaging
+          modalities such as MRI and PET.
+        </p>
+        <p class="lead">
+          <b>I am on the job market this year. I am looking for academic or industry research positions.</b>
         </p>
       </div>
     </div>
