--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -115,7 +115,7 @@
           modalities such as MRI and PET.
         </p>
         <p class="lead">
-          <b>I am on the job market this year. I am looking for academic or industry research positions.</b>
+          <b>I am on the academic job market this year.</b>
         </p>
       </div>
     </div>
