--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -96,15 +96,18 @@
     <div class="row">
       <div class="col-12 mx-auto pt-5">
         <p class="lead">
-          I am a Ph.D. candidate in the Statistical Visual Computing Lab <a href="http://www.svcl.ucsd.edu" target="_blank">(SVCL)</a>
-          with <a href="http://www.svcl.ucsd.edu/~nuno/" target="_blank">Prof. Nuno Vasconcelos </a> at the
-          University of California, San Diego. Before arriving to UC San Diego, I earned both B.Sc. and M.Sc.
-          degrees from Instituto Superior Técnico, Universidade de Lisboa in 2010 and 2012, respectively.
+          I am a final-year Ph.D. candidate at the University of California San Diego under the supervision of
+          <a href="http://www.svcl.ucsd.edu/~nuno/" target="_blank">Prof. Nuno Vasconcelos</a>.
+          I will be joining Carnegie Melon University as a Postdoctoral Fellow working with
+          <a href="http://www.cs.cmu.edu/~abhinavg/" target="_blank">Prof. Abhinav Gupta</a>, and the
+          University of Wisconsin Madison as an Assistant Professor in 2022.
+          Before arriving to UC San Diego, I earned both B.Sc. and M.Sc. degrees from Instituto Superior Técnico,
+          Universidade de Lisboa in 2010 and 2012, respectively.
         </p>
         <p class="lead mb-2">
           I am interested in computer vision and machine learning.
-          Specifically, my research focuses on developing <b>learning and deployment frameworks</b> that enable deep learning
-          to operate with <b>restricted labeled data</b> and <b>restricted computing power</b>.
+          Specifically, my research focuses on developing <b>learning and deployment frameworks</b> that enable
+          deep learning to operate with <b>restricted labeled data</b> and <b>restricted computing power</b>.
           As such, I maintain an active interest in areas such as zero-shot, low-shot learning and other transfer
           learning problems, self-supervised learning, multimodal supervision, and efficient training and deployment
           procedures.
