--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -98,9 +98,9 @@
         <p class="lead">
           I am a final-year Ph.D. candidate at the University of California San Diego under the supervision of
           <a href="http://www.svcl.ucsd.edu/~nuno/" target="_blank">Prof. Nuno Vasconcelos</a>.
-          I will be joining Carnegie Melon University as a Postdoctoral Fellow working with
-          <a href="http://www.cs.cmu.edu/~abhinavg/" target="_blank">Prof. Abhinav Gupta</a>, and the
-          University of Wisconsin Madison as an Assistant Professor in 2022.
+          I will join Carnegie Melon University as a Postdoctoral Fellow working with
+          <a href="http://www.cs.cmu.edu/~abhinavg/" target="_blank">Prof. Abhinav Gupta</a>.
+          In 2022, I will join the ECE department at the University of Wisconsin Madison as an Assistant Professor.
           Before arriving to UC San Diego, I earned both B.Sc. and M.Sc. degrees from Instituto Superior Técnico,
           Universidade de Lisboa in 2010 and 2012, respectively.
         </p>
