--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -346,7 +346,7 @@ img:hover {
   font-weight: 400;
   font-size:11pt;
   line-height: 1.2;
-  color: #881b2b;
+  color: #ea7300;
 }
 .pub_venue {
   font-size:10pt;
