--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -83,9 +83,8 @@
             {% endfor %}
 
             <div class="header-2 mt-2">
-              Links:
               {% for link in site.data.info.links %}
-              <a href="{{ link[1] }}" target="_blank">{{ link[0] }}</a>,
+              <a href="{{ link[1] }}" target="_blank">{{ link[0] }}</a>&emsp;
               {% endfor %}
             </div>
           </div>
@@ -96,13 +95,14 @@
     <div class="row">
       <div class="col-12 mx-auto pt-5">
         <p class="lead">
-          I am a final-year Ph.D. candidate at the University of California San Diego under the supervision of
-          <a href="http://www.svcl.ucsd.edu/~nuno/" target="_blank">Prof. Nuno Vasconcelos</a>.
-          I will join Carnegie Melon University as a Postdoctoral Fellow working with
+          I am currently a postdoc at CMU working with
           <a href="http://www.cs.cmu.edu/~abhinavg/" target="_blank">Prof. Abhinav Gupta</a>.
-          In 2022, I will join the ECE department at the University of Wisconsin Madison as an Assistant Professor.
-          Before arriving to UC San Diego, I earned both B.Sc. and M.Sc. degrees from Instituto Superior Técnico,
-          Universidade de Lisboa in 2010 and 2012, respectively.
+          In th Fall of 2022, I will join the ECE department at the University of Wisconsin Madison as an Assistant Professor.
+          I finished my Ph.D. at the University of California San Diego under the supervision of
+          <a href="http://www.svcl.ucsd.edu/~nuno/" target="_blank">Prof. Nuno Vasconcelos</a>.
+          Before UC San Diego, I earned both B.Sc. and M.Sc. degrees from Instituto Superior Técnico,
+          Universidade de Lisboa, Portugal in 2010 and 2012, respectively, where I worked with I worked with
+          Prof. <a href="http://users.isr.ist.utl.pt/~msilveira/" target="_blank">Margarida Silveira</a>.
         </p>
         <p class="lead mb-2">
           I am interested in computer vision and machine learning.
@@ -111,11 +111,6 @@
           As such, I maintain an active interest in areas such as zero-shot, low-shot learning and other transfer
           learning problems, self-supervised learning, multimodal supervision, and efficient training and deployment
           procedures.
-        </p>
-        <p class="lead">
-          Before starting my Ph.D. studies, I worked with Prof. <a href="http://users.isr.ist.utl.pt/~msilveira/" target="_blank">Margarida Silveira</a>
-          in the automatic diagnosis of Alzheimer's disease and its onset stages, from multiple brain imaging
-          modalities such as MRI and PET.
         </p>
       </div>
     </div>
