--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -220,7 +220,7 @@
   <section class="container mb-5">
     <div class="row mx-auto">
       <div class="col-12">
-        <h1 class="mb-5 col-12 px-0">Resume</h1>
+        <h1 class="mb-5 col-12 px-0">Vitae</h1>
 
         <!-- Education -->
         <h2 class="mb-3 col-12 px-0">Education</h2>
