--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -42,15 +42,15 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
   <div class="container">
-    <a class="navbar-brand js-scroll-trigger" href="#page-top">Pedro Morgado</a>
+    <a class="navbar-brand js-scroll-trigger" href="#about">Pedro Morgado</a>
     <button class="navbar-toggler navbar-toggler-right navbar-dark" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
-        <!-- <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#page-top">About</a>
-        </li> -->
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#about">About</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#publications">Publications</a>
         </li>
@@ -118,7 +118,7 @@
 
   <!-- Publications -->
   <div class="col-12 py-0 my-0 px-0 mx-0" id="publications">
-    <hr class="my-0">
+    <hr class="my-3">
   </div>
   <section class="container mb-5">
     <div class="row mx-auto">
@@ -214,7 +214,7 @@
 
   <!-- Resume -->
   <div class="col-12 py-0 my-0 px-0 mx-0" id="resume">
-    <hr class="my-0">
+    <hr class="my-3">
   </div>
   <section class="container mb-5">
     <div class="row mx-auto">
