--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -95,20 +95,22 @@
     <div class="row">
       <div class="col-12 mx-auto pt-5">
         <p class="lead">
-          I am currently a postdoc at CMU working with
-          <a href="http://www.cs.cmu.edu/~abhinavg/" target="_blank">Prof. Abhinav Gupta</a>.
-          In th Fall of 2022, I will join the ECE department at the University of Wisconsin Madison as an Assistant Professor.
-          I finished my Ph.D. at the University of California San Diego under the supervision of
-          <a href="http://www.svcl.ucsd.edu/~nuno/" target="_blank">Prof. Nuno Vasconcelos</a>.
-          Before UC San Diego, I earned both B.Sc. and M.Sc. degrees from Instituto Superior Técnico,
-          Universidade de Lisboa, Portugal in 2010 and 2012, respectively, where I worked with I worked with
-          Prof. <a href="http://users.isr.ist.utl.pt/~msilveira/" target="_blank">Margarida Silveira</a>.
+          I am currently a postdoc researcher in the Robotics Institute at Carnegie Mellon, working with
+          <a href="http://www.cs.cmu.edu/~abhinavg/" target="_blank">Abhinav Gupta</a>.
+          In the Fall of 2022, I will be joining the ECE department at the University of Wisconsin Madison 
+          as an assistant professor.
+          Previously, I completed my PhD at the University of California San Diego advised by
+          <a href="http://www.svcl.ucsd.edu/~nuno/" target="_blank">Nuno Vasconcelos</a>.
+          Before UC San Diego, I completed both BSc and MSc degrees from Instituto Superior Técnico,
+          Universidade de Lisboa, Portugal, where I worked with
+          <a href="http://users.isr.ist.utl.pt/~msilveira/" target="_blank">Margarida Silveira</a> and 
+          <a href="http://users.isr.ist.utl.pt/~jsm/" target="_blank">Jorge S Marques</a>.
         </p>
         <p class="lead mb-2">
           I am interested in computer vision and machine learning.
           Specifically, my research focuses on developing <b>learning and deployment frameworks</b> that enable
           deep learning to operate with <b>restricted labeled data</b> and <b>restricted computing power</b>.
-          As such, I maintain an active interest in areas such as zero-shot, low-shot learning and other transfer
+          As such, I maintain an active interest in areas such as zero-shot, few-shot and other transfer
           learning problems, self-supervised learning, multimodal supervision, and efficient training and deployment
           procedures.
         </p>
